##########################
# Setup.py Configuration #
##########################
[metadata]
name = pybel_ols
version = 0.0.1-dev
description = A package for building BEL resource files with the EBI Ontology Lookup Service.
long_description = file: README.rst

license = MIT License
license_file = LICENSE

url = https://github.com/pybel/pybel-ols
download_url = https://github.com/pybel/pybel-ols/releases
project_urls =
    Bug Tracker = https://github.com/pybel/pybel-ols/issues
    Source Code = https://github.com/pybel/pybel-ols

author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
keywords =
    Biological Expression Language
    BEL
    Semantic Web
    Networks Biology
    Systems Biology
    Ontologies

[options]
install_requires =
    pybel
    pybel-artifactory
    click
    ols-client

python_requires = >=3.5
tests_require =
    tox
packages = find:
package_dir =
    = src
zip_safe = true

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pybel-ols

[coverage:paths]
source =
    src/pybel_ols
    .tox/*/lib/python*/site-packages/pybel_ols

[coverage:report]
show_missing = True
